--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="modal-content">
                 <div class="modal-body px-5 py-4">
                     <h4 class="text-center mb-3 title">NUEVO FEED</h4>
-                    <form id="add" class="mb-4">
+                    <form id="add" class="mb-4" method="post">
                         <div class="form-group row mb-2 d-flex align-items-center">
                             <label  class="col-1 control-label col-form-label-lg" for="url">URL:</label>
                             <div class="col-11">
@@ -90,7 +90,7 @@
                 </div>
             </section>
             <!--Modelo notica-->
-            <div class="news-container py-5 px-0">
+            <div class="news-container py-5 px-0" id="news">
                 <div class="news d-flex justify-content-between align-items-center p-4">
                     <img class="news-image" src="" alt="Imagen">
                     <div class="info">
@@ -116,5 +116,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+    <script src="assets/js/feed.js"></script>    
 </body>
 </html>
