--- a/index.html
+++ b/index.html
@@ -12,33 +12,35 @@
 </head>
 <body>
     <main class="d-flex">
-        <div class="siderbar d-flex flex-shrink-0 flex-column pt-4">
-            <div id="logo" class=""><img src="" alt="LOGO"></div>
-            <div class="wrapper pe-4 ps-4">
-                <div class="list d-flex justify-content-between">
-                    <h6>FEEDS GUARDADOS</h6>
-                    <img id="list-btn" src="assets/icons/lista.svg" alt="lista">
+        <!-- Sidebar -->
+        <div id="siderbar" class="d-flex flex-shrink-0 flex-column pt-4">
+            <div class="sidebar-wrapper">
+                <div class="wrapper pe-4 ps-4">
+                    <img id="logo" src="https://th.bing.com/th/id/OIP.QdEkrZjd1c_VN_aUtleoFgHaEo?pid=ImgDet&rs=1" alt="LOGO">
+                    <div class="list d-flex justify-content-between">
+                        <h6>FEEDS GUARDADOS</h6>
+                        <img id="list-btn" src="assets/icons/lista.svg" alt="lista">
+                    </div>
+                    <div id="showAll-btn" class="d-flex mb-4">
+                        <img src="assets/icons/rss-icon.svg" alt="RSS">
+                        <p class="m-0 ms-1">Mostrar todo</p>
+                    </div>
+                    <div id="source-container"></div>
                 </div>
-                <div class="d-flex pb-4">
-                    <img src="assets/icons/rss-icon.svg" alt="RSS">
-                    <p class="m-0 ms-1">Mostrar todo</p>
+                <div id="add-feed" class="d-flex justify-content-center pt-2 pb-2" data-bs-toggle="modal" data-bs-target="#new-feed">
+                    <img class="me-1" id="add-icon" src="assets/icons/anadir.svg" alt="" id="add-btn">
+                    <p class="m-0 ms-1">Añadir Feed</p>
                 </div>
-            </div>
-            <div id="source-container">
-                
-            </div>
-            <div id="add-feed" class="d-flex justify-content-center pt-2 pb-2" data-bs-toggle="modal"
-            data-bs-target="#new-feed">
-                <img class="me-1" id="add-icon" src="assets/icons/anadir.svg" alt="" id="add-btn">
-                <p class="m-0 ms-1">Añadir Feed</p>
+                </div>
             </div>
         </div>
+            
          <div class="modal fade" id="new-feed">
             <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-body px-5 py-4">
                     <h4 class="text-center mb-3 title">NUEVO FEED</h4>
-                    <form id="add" class="mb-4" method="post">
+                    <form id="add" name="add" class="mb-4" action="assets/php/save_feeds.php" method="post">
                         <div class="form-group row mb-2 d-flex align-items-center">
                             <label  class="col-1 control-label col-form-label-lg" for="url">URL:</label>
                             <div class="col-11">
@@ -89,33 +91,16 @@
                     <p class="m-0">Actualizar</p>
                 </div>
             </section>
+
             <!--Modelo notica-->
-            <div class="news-container py-5 px-0" id="news">
-                <div class="news d-flex justify-content-between align-items-center p-4">
-                    <img class="news-image" src="" alt="Imagen">
-                    <div class="info">
-                        <div class="header d-flex justify-content-between pb-3">
-                            <h5 class="title">LOREM IPSUM</h5>
-                            <div class="categoria-label d-flex justify-content-center pt-1 pb-1">
-                                <p class="m-0 ms-1">Categoria</p>
-                            </div>
-                        </div>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum sit molestias incidunt ratione nam distinctio quisquam harum minus quibusdam eligendi similique, voluptatum non animi deleniti ipsum cum possimus omnis a?</p>
-                        <div class="footer d-flex justify-content-between ">
-                            <p class="fecha">Publicado el DD/MM/YYYY</p>
-                            <div class="visitar d-flex">
-                                <p class="m-0 px-2">Visitar sitio</p>
-                                <img id="visitar-btn" src="assets/icons/link.svg" alt="visitar">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div class="news-container py-5 px-0" id="news"></div>
+
         </article>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <script src="assets/js/feed.js"></script>    
+    <script src="assets/js/feed.js"></script>
+    <script src="assets/js/validate_feed.js"></script>
 </body>
 </html>
