--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- Sidebar -->
         <div id="siderbar" class="d-flex flex-shrink-0 flex-column pt-4">
             <div class="sidebar-wrapper">
-                <div class="wrapper pe-4 ps-4">
+                <div class="wrapper pe-4 ps-4 d-flex flex-column justify-content-center">
                     <img id="logo" src="https://th.bing.com/th/id/OIP.QdEkrZjd1c_VN_aUtleoFgHaEo?pid=ImgDet&rs=1" alt="LOGO">
                     <div class="list d-flex justify-content-between">
                         <h6>FEEDS GUARDADOS</h6>
@@ -48,7 +48,7 @@
                             </div>
                         </div>
                       <div class="form-group row d-flex align-items-center">
-                        <label for="categoria" class="col-2 control-label col-form-label-lg">Categoria:</label>
+                        <label for="categoria" class="col-2 control-label col-form-label-lg">Categor&iacutea:</label>
                         <div class="col-10">
                             <input type="text" class="form-control form-control-sm rounded-pill" id="categoria" name="categoria">
                         </div>
@@ -62,7 +62,7 @@
                         >
                             Cancelar
                         </button>
-                        <button type="submit" form="add" class="btn btn-primary rounded-pill form-btn" id="add-btn">Añadir</button>
+                        <button type="submit" form="add" class="btn btn-primary rounded-pill form-btn" id="add-btn">A&ntildeadir</button>
                     </div>
                 </div>
                 
@@ -73,7 +73,7 @@
         <article class="feed w-100 pe-5 ps-5">
             <section class="d-flex pt-4">
                 <h1 id="all">Todo</h1>
-                <h1 id="categories" class="inactive">Categorias</h1>
+                <h1 id="categories" class="inactive">Categor&iacuteas</h1>
             </section>
             <section id="tool-bar" class="d-flex justify-content-between">
                 <div id="search-bar" class="d-inline">
