Added search functionality

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <section id="tool-bar" class="d-flex justify-content-between">
                 <div id="search-bar" class="d-inline">
                     <img id="search-icon" src="assets/icons/search.svg" alt="Buscar">
-                    <input id="search-input" class="rounded-pill border-1 border-dark pt-1 pb-1" type="text" placeholder="Buscar">
+                    <input id="search-input" class="rounded-pill border-1 border-dark pt-1 pb-1" type="text" placeholder="Buscar título">
                 </div>
                 <div class="sort-articles">
                     <label class="pe-1" for="sorting-options">Ordenar por:</label>
@@ -102,5 +102,6 @@
         crossorigin="anonymous"></script>
     <script src="assets/js/feed.js"></script>
     <script src="assets/js/validate_feed.js"></script>
+    <script src="assets/js/search_bar.js"></script>
 </body>
 </html>
