New features - Now all news from all registered feeds appears when page loads. Some functions of feed.js was changed because of this - Category names of news displays at right of the news item - New loading animation when changing between feeds or updating - Removed general feed title. Now the title of the feed appears above item image. This is for better understanding when displaying all news from all feeds. - load.php renamed to read_db.php

--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
             </section>
 
             <!--Modelo notica-->
-            <div class="news-container py-5 px-0" id="news"></div>
+            <div class="news-container h-100 d-flex flex-column align-items-center justify-content-center" id="news">
+                <h1>No hay feeds a&ntildeadidos</h1>
+            </div>
 
         </article>
     </main>
