--- a/index.html
+++ b/index.html
@@ -5,14 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RSS Reader</title>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/index.css">
 </head>
 <body>
     <main class="d-flex">
-        <!-- Sidebar -->
         <div id="siderbar" class="d-flex flex-shrink-0 flex-column pt-4">
             <div class="sidebar-wrapper">
                 <div class="wrapper pe-4 ps-4 d-flex flex-column justify-content-center">
@@ -29,8 +26,7 @@
                 </div>
             </div>
         </div>
-            
-         <div class="modal fade" id="new-feed">
+        <div class="modal fade" id="new-feed">
             <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-body px-5 py-4">
@@ -50,21 +46,15 @@
                       </div>
                     </form>
                     <div class="float-end form-buttons">
-                        <button
-                            type="button"
-                            class="btn btn-light rounded-pill form-btn"
-                            data-bs-dismiss="modal"
-                        >
+                        <button type="button" class="btn btn-light rounded-pill form-btn" data-bs-dismiss="modal">
                             Cancelar
                         </button>
                         <button type="submit" form="add" class="btn btn-primary rounded-pill form-btn" id="add-btn">A&ntildeadir</button>
                     </div>
                 </div>
-                
             </div>
             </div>
         </div>
-
         <article class="feed w-100 pe-5 ps-5">
             <section class="d-flex pt-4">
                 <h1 id="all">Todo</h1>
@@ -89,17 +79,12 @@
                     <p class="m-0">Actualizar</p>
                 </div>
             </section>
-
-            <!--Modelo notica-->
             <div class="news-container h-100 d-flex flex-column align-items-center justify-content-center" id="news">
                 <h1>No hay feeds a&ntildeadidos</h1>
             </div>
-
         </article>
     </main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="assets/js/feed.js"></script>
     <script src="assets/js/validate_feed.js"></script>
     <script src="assets/js/search_bar.js"></script>
