--- a/index.html
+++ b/index.html
@@ -1,92 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RSS Reader</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/index.css">
-</head>
-<body>
-    <main class="d-flex">
-        <div id="siderbar" class="d-flex flex-shrink-0 flex-column pt-4">
-            <div class="sidebar-wrapper">
-                <div class="wrapper pe-4 ps-4 d-flex flex-column justify-content-center">
-                    <img id="logo" src="https://th.bing.com/th/id/OIP.QdEkrZjd1c_VN_aUtleoFgHaEo?pid=ImgDet&rs=1" alt="LOGO">
-                    <div class="list d-flex justify-content-between">
-                        <h6>FEEDS GUARDADOS</h6>
-                    </div>
-                    <div id="source-container"></div>
-                </div>
-                <div id="add-feed" class="d-flex justify-content-center pt-2 pb-2" data-bs-toggle="modal" data-bs-target="#new-feed">
-                    <img class="me-1" id="add-icon" src="assets/icons/anadir.svg" alt="" id="add-btn">
-                    <p class="m-0 ms-1">Añadir Feed</p>
-                </div>
-                </div>
-            </div>
-        </div>
-        <div class="modal fade" id="new-feed">
-            <div class="modal-dialog modal-lg modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-body px-5 py-4">
-                    <h4 class="text-center mb-3 title">NUEVO FEED</h4>
-                    <form id="add" name="add" class="mb-4" action="assets/php/save_feeds.php" method="post">
-                        <div class="form-group row mb-2 d-flex align-items-center">
-                            <label  class="col-1 control-label col-form-label-lg" for="url">URL:</label>
-                            <div class="col-11">
-                                <input type="text" class="form-control form-control-sm rounded-pill" id="url" name="url">
-                            </div>
-                        </div>
-                      <div class="form-group row d-flex align-items-center">
-                        <label for="categoria" class="col-2 control-label col-form-label-lg">Categor&iacutea:</label>
-                        <div class="col-10">
-                            <input type="text" class="form-control form-control-sm rounded-pill" id="categoria" name="categoria">
-                        </div>
-                      </div>
-                    </form>
-                    <div class="float-end form-buttons">
-                        <button type="button" class="btn btn-light rounded-pill form-btn" data-bs-dismiss="modal">
-                            Cancelar
-                        </button>
-                        <button type="submit" form="add" class="btn btn-primary rounded-pill form-btn" id="add-btn">A&ntildeadir</button>
-                    </div>
-                </div>
-            </div>
-            </div>
-        </div>
-        <article class="feed w-100 pe-5 ps-5">
-            <section class="d-flex pt-4">
-                <h1 id="all">Todo</h1>
-                <h1 id="categories" class="inactive">Categor&iacuteas</h1>
-            </section>
-            <section id="tool-bar" class="d-flex justify-content-between">
-                <div id="search-bar" class="d-inline">
-                    <img id="search-icon" src="assets/icons/search.svg" alt="Buscar">
-                    <input id="search-input" class="rounded-pill border-1 border-dark pt-1 pb-1" type="text" placeholder="Buscar título">
-                </div>
-                <div class="sort-articles" id="sorting-options">
-                    <label class="pe-1" for="sorting-options">Ordenar por:</label>
-                    <select class="sort-by rounded-pill p-1 pe-2 ps-2" name="sort-by" id="sort-by">
-                        <option selected id="recentSort">Más reciente</option>
-                        <option id = oldSort>Más antiguo</option>
-                        <option id="ascAlphaSort" >A-Z</option>
-                        <option id="descAlphaSort">Z-A</option>
-                    </select>
-                </div>
-                <div id="refresh" class="d-flex">
-                    <img id="refresh-btn" src="assets/icons/actualizar.svg" alt="Actualizar">
-                    <p class="m-0">Actualizar</p>
-                </div>
-            </section>
-            <div class="news-container h-100 d-flex flex-column align-items-center justify-content-center" id="news">
-                <h1>No hay feeds a&ntildeadidos</h1>
-            </div>
-        </article>
-    </main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="assets/js/feed.js"></script>
-    <script src="assets/js/validate_feed.js"></script>
-    <script src="assets/js/search_bar.js"></script>
-</body>
-</html>
+<!doctypehtml><html lang=en><meta charset=UTF-8><meta content="IE=edge"http-equiv=X-UA-Compatible><meta content="width=device-width,initial-scale=1"name=viewport><title>RSS Reader</title><link href=https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css rel=stylesheet crossorigin=anonymous integrity=sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3><link href=assets/css/index.css rel=stylesheet><main class=d-flex><div class="d-flex flex-column flex-shrink-0 pt-4"id=siderbar><div class=sidebar-wrapper><div class="d-flex flex-column justify-content-center pe-4 ps-4 wrapper"><img id=logo alt=LOGO src="https://th.bing.com/th/id/OIP.QdEkrZjd1c_VN_aUtleoFgHaEo?pid=ImgDet&rs=1"><div class="d-flex justify-content-between list"><h6>FEEDS GUARDADOS</h6></div><div id=source-container></div></div><div class="d-flex pb-2 justify-content-center pt-2"id=add-feed data-bs-target=#new-feed data-bs-toggle=modal><img id=add-icon id=add-btn alt=""src=assets/icons/anadir.svg class=me-1><p class="m-0 ms-1">Añadir Feed</div></div></div><div class="fade modal"id=new-feed><div class="modal-dialog modal-dialog-centered modal-lg"><div class=modal-content><div class="modal-body px-5 py-4"><h4 class="mb-3 text-center title">NUEVO FEED</h4><form action=assets/php/save_feeds.php class=mb-4 id=add method=post name=add><div class="d-flex align-items-center form-group row mb-2"><label class="col-form-label-lg control-label col-1"for=url>URL:</label><div class=col-11><input class="rounded-pill form-control form-control-sm"id=url name=url></div></div><div class="d-flex align-items-center form-group row"><label class="col-form-label-lg control-label col-2"for=categoria>Categoría:</label><div class=col-10><input class="rounded-pill form-control form-control-sm"id=categoria name=categoria></div></div></form><div class="float-end form-buttons"><button class="rounded-pill btn form-btn btn-light"type=button data-bs-dismiss=modal>Cancelar</button> <button class="rounded-pill btn form-btn btn-primary"type=submit form=add id=add-btn>Añadir</button></div></div></div></div></div><article class="feed pe-5 ps-5 w-100"><section class="d-flex pt-4"><h1 id=all>Todo</h1><h1 id=categories class=inactive>Categorías</h1></section><section class="d-flex justify-content-between"id=tool-bar><div class=d-inline id=search-bar><img id=search-icon alt=Buscar src=assets/icons/search.svg> <input class="rounded-pill border-1 border-dark pb-1 pt-1"id=search-input placeholder="Buscar título"></div><div class=sort-articles id=sorting-options><label class=pe-1 for=sorting-options>Ordenar por:</label> <select class="rounded-pill p-1 pe-2 ps-2 sort-by"id=sort-by name=sort-by><option id=recentSort selected>Más reciente<option id=oldSort>Más antiguo<option id=ascAlphaSort>A-Z<option id=descAlphaSort>Z-A</select></div><div class=d-flex id=refresh><img id=refresh-btn alt=Actualizar src=assets/icons/actualizar.svg><p class=m-0>Actualizar</div></section><div class="d-flex align-items-center flex-column h-100 justify-content-center news-container"id=news><h1>No hay feeds añadidos</h1></div></article></main><script src=https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js crossorigin=anonymous integrity=sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p></script><script src=assets/js/feed.js></script><script src=assets/js/validate_feed.js></script><script src=assets/js/search_bar.js></script>
