Icon optimization - Icons now are CSS sprites
PHP optimization
- Repetitive code (format & print news code) now is a function

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div id="source-container"></div>
                 </div>
                 <div id="add-feed" class="d-flex justify-content-center pt-2 pb-2" data-bs-toggle="modal" data-bs-target="#new-feed">
-                    <img class="me-1" id="add-icon" src="assets/icons/anadir.svg" alt="" id="add-btn">
+                    <div class="me-1 bg-anadir" id="add-icon"> </div>
                     <p class="m-0 ms-1">Añadir Feed</p>
                 </div>
                 </div>
@@ -72,7 +72,7 @@
             </section>
             <section id="tool-bar" class="d-flex justify-content-between">
                 <div id="search-bar" class="d-inline">
-                    <img id="search-icon" src="assets/icons/search.svg" alt="Buscar">
+                    <div id="search-icon" class="bg-search" alt="Buscar"></div>
                     <input id="search-input" class="rounded-pill border-1 border-dark pt-1 pb-1" type="text" placeholder="Buscar título">
                 </div>
                 <div class="sort-articles" id="sorting-options">
@@ -85,7 +85,7 @@
                     </select>
                 </div>
                 <div id="refresh" class="d-flex">
-                    <img id="refresh-btn" src="assets/icons/actualizar.svg" alt="Actualizar">
+                    <div id="refresh-btn" class="bg-actualizar"></div>
                     <p class="m-0">Actualizar</p>
                 </div>
             </section>
