Icon optimization - Icons now are CSS sprites
Images optimization
- Images compressed
- Logo is now stored locally and compressed (21 kb -> 3 kb plus faster load)
- GIF loading image optimized

PHP optimization
- Repetitive code (format & print news code) now is a function

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="siderbar" class="d-flex flex-shrink-0 flex-column pt-4">
             <div class="sidebar-wrapper">
                 <div class="wrapper pe-4 ps-4 d-flex flex-column justify-content-center">
-                    <img id="logo" src="https://th.bing.com/th/id/OIP.QdEkrZjd1c_VN_aUtleoFgHaEo?pid=ImgDet&rs=1" alt="LOGO">
+                    <img id="logo" src="assets/icons/logo.avif" alt="LOGO">
                     <div class="list d-flex justify-content-between">
                         <h6>FEEDS GUARDADOS</h6>
                     </div>
