--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Tu RSS de noticias favorito creado para la materia de Optimizaci&oacuten de aplicaciones web">
     <title>RSS Reader</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -100,8 +101,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <script src="assets/js/feed.js"></script>
-    <script src="assets/js/validate_feed.js"></script>
-    <script src="assets/js/search_bar.js"></script>
+    <script defer src="assets/js/feed.js"></script>
+    <script defer src="assets/js/validate_feed.js"></script>
+    <script defer src="assets/js/search_bar.js"></script>
 </body>
 </html>
