--- a/index.html
+++ b/index.html
@@ -9,7 +9,238 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/index.css">
+
+    <style>
+        @import "assets/css/variables.css";
+
+        body {
+            font-family: var(--regular-font);
+        }
+
+        .list {
+            padding-top: 5rem;
+        }
+
+        .sort-by {
+            width: 150px;
+        }
+
+        .feed {
+            margin-left: 20rem;
+        }
+
+        #siderbar {
+            width: 320px;
+            background-color: var(--bg-sidebar);
+            color: var(--titles-sidebar);
+            font-family: var(--bold-font);
+            height: 100%;
+            position: fixed;
+            z-index: 100;
+        }
+
+        .sidebar-wrapper {
+            position: relative;
+        }
+
+        #list-btn {
+            width: 28px;
+        }
+
+        #showAll-btn {
+            cursor: pointer;
+        }
+
+        #delete{
+            cursor:pointer;
+        }
+
+        .feed-source {
+            background-color: var(--bg-source-tag);
+            border-radius: 20px;
+            padding: 10px;
+            margin-bottom: 1rem;
+            cursor: pointer;
+        }
+
+        .news {
+            background-color: var(--bg-news);
+            border-radius: 25px;
+            margin-bottom: 1.3rem;
+
+        }
+
+        .news-image {
+            background-color: #ffffff;
+            height: 200px;
+            width: 200px;
+        }
+
+        .info{
+            height: 300px;
+            overflow: auto;
+        }
+
+        .fecha {
+            font-style: italic;
+        }
+
+        .categoria-label {
+            background-color: var(--bg-category-tag);
+            color: #ffffff;
+            border-radius: 25px;
+            width: 150px;
+            font-family: var(--italic-bold-font);
+        }
+
+        .visitar {
+            font-style: italic;
+            align-items: center;
+            cursor: pointer;
+        }
+
+
+        #source-container{
+            overflow:auto;
+            height: 200px;
+        }
+
+
+        .feed-source img {
+            width: 14px;
+            height: 14px;
+            margin-left: 4px;
+        }
+
+        .feed-source p {
+            font-size: 14px;
+            padding-left: 8px;
+            color: var(--bg-new-feed);
+            margin-bottom: 0;
+        }
+
+        #add-feed {
+            background-color: var(--bg-new-feed);
+            cursor: pointer;
+            position: fixed;
+            bottom: 0;
+            width: 320px;
+            color: #ffffff;
+        }
+
+        #add-feed:hover {
+            background-color: var(--bg-new-feed-hover);
+        }
+
+        #logo {
+            margin: auto;
+            width: 220px;
+            height: 220px;
+            object-fit: cover;
+            align-self: center;
+            border-radius: 100%;
+        }
+
+        #search-bar {
+            position: relative;
+        }
+
+        input::placeholder {
+            font-family: var(--italic-font);
+        }
+
+        #search-icon {
+            position: absolute;
+            z-index: 2;
+            display: block;
+            margin-top: 8px;
+            margin-left: 10px;
+        }
+
+        #search-input {
+            padding-left: 2.1rem;
+            width: 480px;
+        }
+
+        #all {
+            padding-right: 1.5rem;
+        }
+
+        #all,
+        #categories {
+            font-family: var(--bold-font);
+            cursor: pointer;
+        }
+
+        .inactive {
+            color: #b6b6b6;
+        }
+
+        #tool-bar {
+            padding-top: 10px;
+        }
+
+        #refresh {
+            align-items: center;
+            cursor: pointer;
+        }
+
+        #new-feed .modal-content {
+            border-radius: 18px;
+        }
+
+        .form-btn {
+            width: 100px !important;
+            margin-left: 20px;
+        }
+
+        #add-btn {
+            background-color: var(--bg-new-feed);
+            border-color: var(--bg-new-feed);
+        }
+
+        .form-buttons button:hover {
+            opacity: 0.8;
+            border-color: #505050 !important;
+        }
+
+
+        .title {
+            font-family: var(--extrabold-font);
+        }
+
+
+        .visitar a {
+            color: #000000;
+            font-weight: bold;
+        }
+
+        .bg-delete {
+            width: 32px; height: 32px;
+            background: url('assets/icons/css_sprites.png') -10px -10px;
+        }
+
+        .bg-anadir {
+            width: 18px; height: 18px;
+            background: url('assets/icons/css_sprites.png') -62px -10px;
+        }
+
+        .bg-actualizar {
+            width: 18px; height: 18px;
+            background: url('assets/icons/css_sprites.png') -10px -62px;
+        }
+
+        .bg-link {
+            width: 18px; height: 18px;
+            background: url('assets/icons/css_sprites.png') -48px -62px;
+        }
+
+        .bg-search {
+            width: 18px; height: 18px;
+            background: url('assets/icons/css_sprites.png') -100px -10px;
+        }
+    </style>
+
 </head>
 <body>
     <main class="d-flex">
@@ -19,7 +250,7 @@
                 <div class="wrapper pe-4 ps-4 d-flex flex-column justify-content-center">
                     <img id="logo" src="assets/icons/logo.avif" alt="LOGO">
                     <div class="list d-flex justify-content-between">
-                        <h6>FEEDS GUARDADOS</h6>
+                        <h5>FEEDS GUARDADOS</h5>
                     </div>
                     <div id="source-container"></div>
                 </div>
