JS, CSS & HTML minified & obfuscated

--- a/index.html
+++ b/index.html
@@ -1,339 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Tu RSS de noticias favorito creado para la materia de Optimizaci&oacuten de aplicaciones web">
-    <title>RSS Reader</title>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <style>
-        @import "assets/css/variables.css";
-
-        body {
-            font-family: var(--regular-font);
-        }
-
-        .list {
-            padding-top: 5rem;
-        }
-
-        .sort-by {
-            width: 150px;
-        }
-
-        .feed {
-            margin-left: 20rem;
-        }
-
-        #siderbar {
-            width: 320px;
-            background-color: var(--bg-sidebar);
-            color: var(--titles-sidebar);
-            font-family: var(--bold-font);
-            height: 100%;
-            position: fixed;
-            z-index: 100;
-        }
-
-        .sidebar-wrapper {
-            position: relative;
-        }
-
-        #list-btn {
-            width: 28px;
-        }
-
-        #showAll-btn {
-            cursor: pointer;
-        }
-
-        #delete{
-            cursor:pointer;
-        }
-
-        .feed-source {
-            background-color: var(--bg-source-tag);
-            border-radius: 20px;
-            padding: 10px;
-            margin-bottom: 1rem;
-            cursor: pointer;
-        }
-
-        .news {
-            background-color: var(--bg-news);
-            border-radius: 25px;
-            margin-bottom: 1.3rem;
-
-        }
-
-        .news-image {
-            background-color: #ffffff;
-            height: 200px;
-            width: 200px;
-        }
-
-        .info{
-            height: 300px;
-            overflow: auto;
-        }
-
-        .fecha {
-            font-style: italic;
-        }
-
-        .categoria-label {
-            background-color: var(--bg-category-tag);
-            color: #ffffff;
-            border-radius: 25px;
-            width: 150px;
-            font-family: var(--italic-bold-font);
-        }
-
-        .visitar {
-            font-style: italic;
-            align-items: center;
-            cursor: pointer;
-        }
-
-
-        #source-container{
-            overflow:auto;
-            height: 200px;
-        }
-
-
-        .feed-source img {
-            width: 14px;
-            height: 14px;
-            margin-left: 4px;
-        }
-
-        .feed-source p {
-            font-size: 14px;
-            padding-left: 8px;
-            color: var(--bg-new-feed);
-            margin-bottom: 0;
-        }
-
-        #add-feed {
-            background-color: var(--bg-new-feed);
-            cursor: pointer;
-            position: fixed;
-            bottom: 0;
-            width: 320px;
-            color: #ffffff;
-        }
-
-        #add-feed:hover {
-            background-color: var(--bg-new-feed-hover);
-        }
-
-        #logo {
-            margin: auto;
-            width: 220px;
-            height: 220px;
-            object-fit: cover;
-            align-self: center;
-            border-radius: 100%;
-        }
-
-        #search-bar {
-            position: relative;
-        }
-
-        input::placeholder {
-            font-family: var(--italic-font);
-        }
-
-        #search-icon {
-            position: absolute;
-            z-index: 2;
-            display: block;
-            margin-top: 8px;
-            margin-left: 10px;
-        }
-
-        #search-input {
-            padding-left: 2.1rem;
-            width: 480px;
-        }
-
-        #all {
-            padding-right: 1.5rem;
-        }
-
-        #all,
-        #categories {
-            font-family: var(--bold-font);
-            cursor: pointer;
-        }
-
-        .inactive {
-            color: #b6b6b6;
-        }
-
-        #tool-bar {
-            padding-top: 10px;
-        }
-
-        #refresh {
-            align-items: center;
-            cursor: pointer;
-        }
-
-        #new-feed .modal-content {
-            border-radius: 18px;
-        }
-
-        .form-btn {
-            width: 100px !important;
-            margin-left: 20px;
-        }
-
-        #add-btn {
-            background-color: var(--bg-new-feed);
-            border-color: var(--bg-new-feed);
-        }
-
-        .form-buttons button:hover {
-            opacity: 0.8;
-            border-color: #505050 !important;
-        }
-
-
-        .title {
-            font-family: var(--extrabold-font);
-        }
-
-
-        .visitar a {
-            color: #000000;
-            font-weight: bold;
-        }
-
-        .bg-delete {
-            width: 32px; height: 32px;
-            background: url('assets/icons/css_sprites.png') -10px -10px;
-        }
-
-        .bg-anadir {
-            width: 18px; height: 18px;
-            background: url('assets/icons/css_sprites.png') -62px -10px;
-        }
-
-        .bg-actualizar {
-            width: 18px; height: 18px;
-            background: url('assets/icons/css_sprites.png') -10px -62px;
-        }
-
-        .bg-link {
-            width: 18px; height: 18px;
-            background: url('assets/icons/css_sprites.png') -48px -62px;
-        }
-
-        .bg-search {
-            width: 18px; height: 18px;
-            background: url('assets/icons/css_sprites.png') -100px -10px;
-        }
-    </style>
-
-</head>
-<body>
-    <main class="d-flex">
-        <!-- Sidebar -->
-        <div id="siderbar" class="d-flex flex-shrink-0 flex-column pt-4">
-            <div class="sidebar-wrapper">
-                <div class="wrapper pe-4 ps-4 d-flex flex-column justify-content-center">
-                    <img id="logo" src="assets/icons/logo.avif" alt="LOGO">
-                    <div class="list d-flex justify-content-between">
-                        <h5>FEEDS GUARDADOS</h5>
-                    </div>
-                    <div id="source-container"></div>
-                </div>
-                <div id="add-feed" class="d-flex justify-content-center pt-2 pb-2" data-bs-toggle="modal" data-bs-target="#new-feed">
-                    <div class="me-1 bg-anadir" id="add-icon"> </div>
-                    <p class="m-0 ms-1">Añadir Feed</p>
-                </div>
-                </div>
-            </div>
-        </div>
-            
-         <div class="modal fade" id="new-feed">
-            <div class="modal-dialog modal-lg modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-body px-5 py-4">
-                    <h4 class="text-center mb-3 title">NUEVO FEED</h4>
-                    <form id="add" name="add" class="mb-4" action="assets/php/save_feeds.php" method="post">
-                        <div class="form-group row mb-2 d-flex align-items-center">
-                            <label  class="col-1 control-label col-form-label-lg" for="url">URL:</label>
-                            <div class="col-11">
-                                <input type="text" class="form-control form-control-sm rounded-pill" id="url" name="url">
-                            </div>
-                        </div>
-                      <div class="form-group row d-flex align-items-center">
-                        <label for="categoria" class="col-2 control-label col-form-label-lg">Categor&iacutea:</label>
-                        <div class="col-10">
-                            <input type="text" class="form-control form-control-sm rounded-pill" id="categoria" name="categoria">
-                        </div>
-                      </div>
-                    </form>
-                    <div class="float-end form-buttons">
-                        <button
-                            type="button"
-                            class="btn btn-light rounded-pill form-btn"
-                            data-bs-dismiss="modal"
-                        >
-                            Cancelar
-                        </button>
-                        <button type="submit" form="add" class="btn btn-primary rounded-pill form-btn" id="add-btn">A&ntildeadir</button>
-                    </div>
-                </div>
-                
-            </div>
-            </div>
-        </div>
-
-        <article class="feed w-100 pe-5 ps-5">
-            <section class="d-flex pt-4">
-                <h1 id="all">Todo</h1>
-                <h1 id="categories" class="inactive">Categor&iacuteas</h1>
-            </section>
-            <section id="tool-bar" class="d-flex justify-content-between">
-                <div id="search-bar" class="d-inline">
-                    <div id="search-icon" class="bg-search" alt="Buscar"></div>
-                    <input id="search-input" class="rounded-pill border-1 border-dark pt-1 pb-1" type="text" placeholder="Buscar título">
-                </div>
-                <div class="sort-articles" id="sorting-options">
-                    <label class="pe-1" for="sorting-options">Ordenar por:</label>
-                    <select class="sort-by rounded-pill p-1 pe-2 ps-2" name="sort-by" id="sort-by">
-                        <option selected id="recentSort">Más reciente</option>
-                        <option id = oldSort>Más antiguo</option>
-                        <option id="ascAlphaSort" >A-Z</option>
-                        <option id="descAlphaSort">Z-A</option>
-                    </select>
-                </div>
-                <div id="refresh" class="d-flex">
-                    <div id="refresh-btn" class="bg-actualizar"></div>
-                    <p class="m-0">Actualizar</p>
-                </div>
-            </section>
-
-            <!--Modelo notica-->
-            <div class="news-container h-100 d-flex flex-column align-items-center justify-content-center" id="news">
-                <h1>No hay feeds a&ntildeadidos</h1>
-            </div>
-
-        </article>
-    </main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-    <script defer src="assets/js/feed.js"></script>
-    <script defer src="assets/js/validate_feed.js"></script>
-    <script defer src="assets/js/search_bar.js"></script>
-</body>
-</html>
+<!DOCTYPE html> <html lang="en"> <head> <meta charset="UTF-8"> <meta http-equiv="X-UA-Compatible" content="IE=edge"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <meta name="description" content="Tu RSS de noticias favorito creado para la materia de Optimizaci&oacuten de aplicaciones web"> <title>RSS Reader</title> <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> <style>
+    @import "assets/css/variables.css";body{font-family:var(--regular-font)}.list{padding-top:5rem}.sort-by{width:150px}.feed{margin-left:20rem}#siderbar{width:320px;background-color:var(--bg-sidebar);color:var(--titles-sidebar);font-family:var(--bold-font);height:100%;position:fixed;z-index:100}.sidebar-wrapper{position:relative}#list-btn{width:28px}#showAll-btn{cursor:pointer}#delete{cursor:pointer}.feed-source{background-color:var(--bg-source-tag);border-radius:20px;padding:10px;margin-bottom:1rem;cursor:pointer}.news{background-color:var(--bg-news);border-radius:25px;margin-bottom:1.3rem}.news-image{background-color:#fff;height:200px;width:200px}.info{height:300px;overflow:auto}.fecha{font-style:italic}.categoria-label{background-color:var(--bg-category-tag);color:#fff;border-radius:25px;width:150px;font-family:var(--italic-bold-font)}.visitar{font-style:italic;align-items:center;cursor:pointer}#source-container{overflow:auto;height:200px}.feed-source img{width:14px;height:14px;margin-left:4px}.feed-source p{font-size:14px;padding-left:8px;color:var(--bg-new-feed);margin-bottom:0}#add-feed{background-color:var(--bg-new-feed);cursor:pointer;position:fixed;bottom:0;width:320px;color:#fff}#add-feed:hover{background-color:var(--bg-new-feed-hover)}#logo{margin:auto;width:220px;height:220px;object-fit:cover;align-self:center;border-radius:100%}#search-bar{position:relative}input::placeholder{font-family:var(--italic-font)}#search-icon{position:absolute;z-index:2;display:block;margin-top:8px;margin-left:10px}#search-input{padding-left:2.1rem;width:480px}#all{padding-right:1.5rem}#all,#categories{font-family:var(--bold-font);cursor:pointer}.inactive{color:#b6b6b6}#tool-bar{padding-top:10px}#refresh{align-items:center;cursor:pointer}#new-feed .modal-content{border-radius:18px}.form-btn{width:100px !important;margin-left:20px}#add-btn{background-color:var(--bg-new-feed);border-color:var(--bg-new-feed)}.form-buttons button:hover{opacity:.8;border-color:#505050 !important}.title{font-family:var(--extrabold-font)}.visitar a{color:#000;font-weight:bold}.bg-delete{width:32px;height:32px;background:url('assets/icons/css_sprites.png') -10px -10px}.bg-anadir{width:18px;height:18px;background:url('assets/icons/css_sprites.png') -62px -10px}.bg-actualizar{width:18px;height:18px;background:url('assets/icons/css_sprites.png') -10px -62px}.bg-link{width:18px;height:18px;background:url('assets/icons/css_sprites.png') -48px -62px}.bg-search{width:18px;height:18px;background:url('assets/icons/css_sprites.png') -100px -10px}
+</style> </head> <body> <main class="d-flex"> <div id="siderbar" class="d-flex flex-shrink-0 flex-column pt-4"> <div class="sidebar-wrapper"> <div class="wrapper pe-4 ps-4 d-flex flex-column justify-content-center"> <img id="logo" src="assets/icons/logo.avif" alt="LOGO"> <div class="list d-flex justify-content-between"> <h5>FEEDS GUARDADOS</h5> </div> <div id="source-container"></div> </div> <div id="add-feed" class="d-flex justify-content-center pt-2 pb-2" data-bs-toggle="modal" data-bs-target="#new-feed"> <div class="me-1 bg-anadir" id="add-icon"> </div> <p class="m-0 ms-1">Añadir Feed</p> </div> </div> </div> </div> <div class="modal fade" id="new-feed"> <div class="modal-dialog modal-lg modal-dialog-centered"> <div class="modal-content"> <div class="modal-body px-5 py-4"> <h4 class="text-center mb-3 title">NUEVO FEED</h4> <form id="add" name="add" class="mb-4" action="assets/php/save_feeds.php" method="post"> <div class="form-group row mb-2 d-flex align-items-center"> <label class="col-1 control-label col-form-label-lg" for="url">URL:</label> <div class="col-11"> <input type="text" class="form-control form-control-sm rounded-pill" id="url" name="url"> </div> </div> <div class="form-group row d-flex align-items-center"> <label for="categoria" class="col-2 control-label col-form-label-lg">Categor&iacutea:</label> <div class="col-10"> <input type="text" class="form-control form-control-sm rounded-pill" id="categoria" name="categoria"> </div> </div> </form> <div class="float-end form-buttons"> <button type="button" class="btn btn-light rounded-pill form-btn" data-bs-dismiss="modal"> Cancelar </button> <button type="submit" form="add" class="btn btn-primary rounded-pill form-btn" id="add-btn">A&ntildeadir</button> </div> </div> </div> </div> </div> <article class="feed w-100 pe-5 ps-5"> <section class="d-flex pt-4"> <h1 id="all">Todo</h1> <h1 id="categories" class="inactive">Categor&iacuteas</h1> </section> <section id="tool-bar" class="d-flex justify-content-between"> <div id="search-bar" class="d-inline"> <div id="search-icon" class="bg-search" alt="Buscar"></div> <input id="search-input" class="rounded-pill border-1 border-dark pt-1 pb-1" type="text" placeholder="Buscar título"> </div> <div class="sort-articles" id="sorting-options"> <label class="pe-1" for="sorting-options">Ordenar por:</label> <select class="sort-by rounded-pill p-1 pe-2 ps-2" name="sort-by" id="sort-by"> <option selected id="recentSort">Más reciente</option> <option id=oldSort>Más antiguo</option> <option id="ascAlphaSort">A-Z</option> <option id="descAlphaSort">Z-A</option> </select> </div> <div id="refresh" class="d-flex"> <div id="refresh-btn" class="bg-actualizar"></div> <p class="m-0">Actualizar</p> </div> </section> <div class="news-container h-100 d-flex flex-column align-items-center justify-content-center" id="news"> <h1>No hay feeds a&ntildeadidos</h1> </div> </article> </main> <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> <script defer src="assets/js/feed.js"></script> <script defer src="assets/js/validate_feed.js"></script> <script defer src="assets/js/search_bar.js"></script> </body> </html>
